[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bullet/Bullet3 (2).png" type="Texture" id=1]
[ext_resource path="res://assets/bullet/Bullet3 (3).png" type="Texture" id=2]
[ext_resource path="res://assets/bullet/Bullet3 (1).png" type="Texture" id=3]
[ext_resource path="res://assets/bullet/Bullet3 (4).png" type="Texture" id=4]
[ext_resource path="res://Karakter/peluru/peluru.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="peluru" type="RigidBody2D"]
collision_layer = 16
collision_mask = 25
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 5 )

[node name="peluruSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shooting"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_peluru_body_entered"]
[connection signal="animation_finished" from="peluruSprite" to="." method="_on_peluruSprite_animation_finished"]
